fix: fixes css start button alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@ button {
     color: white;
     background-color: grey;
     z-index: 1;
-    margin-top: 6vmin;
+    margin-top: 5vmin;
 }
 
 #play-again {
